--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=spring20240405
 # view settings
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
-spring.session.timeout=5
+# sever session timeout
+spring.session.timeout=30m
