--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.session.timeout=30m
 spring.datasource.url=jdbc:mariadb://localhost:3306/w3schools
 spring.datasource.username=root
 spring.datasource.password=1234
+mybatis.configuration.map-underscore-to-camel-case=true
