--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 # sever session timeout
 spring.session.timeout=30m
-#datavase connection
+#database connection
 spring.datasource.url=jdbc:mariadb://localhost:3306/w3schools
 spring.datasource.username=root
 spring.datasource.password=1234
