--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.password=1234
 mybatis.configuration.map-underscore-to-camel-case=true
 #show sql log
 logging.level.com.study.mapper=debug
+# key files
+jwt.public.key=
+jwt.private.key=
