--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #show sql log
 logging.level.com.study.mapper=debug
 # key files
-jwt.public.key=
-jwt.private.key=
+jwt.public.key=classpath:secret/app.pub
+jwt.private.key=classpath:secret/app.key
